[gd_scene load_steps=20 format=3 uid="uid://dsm4bk65vk7x1"]

[ext_resource type="Script" path="res://player/player.gd" id="1_7kdv3"]
[ext_resource type="Shader" path="res://shader/player.gdshader" id="2_irfne"]
[ext_resource type="Texture2D" uid="uid://diwgahwige0bi" path="res://asset/main_character/IC/ship/1.png" id="3_jnccy"]
[ext_resource type="Texture2D" uid="uid://dy82anj1ilrga" path="res://asset/main_character/AD/ship/1.png" id="3_m0ue2"]
[ext_resource type="Texture2D" uid="uid://bufinalgugf4o" path="res://asset/main_character/AD/ship/2.png" id="4_augh6"]
[ext_resource type="Texture2D" uid="uid://ddqp4ywejmok5" path="res://asset/main_character/IC/ship/2.png" id="4_c1glq"]
[ext_resource type="Texture2D" uid="uid://cofb4y23cag7o" path="res://asset/main_character/AD/ship/3.png" id="5_osn3v"]
[ext_resource type="Texture2D" uid="uid://bqguphsdak3w0" path="res://asset/main_character/IC/ship/3.png" id="5_pqbhw"]
[ext_resource type="Texture2D" uid="uid://br2ihs5kjlw6k" path="res://asset/main_character/AS/ship/1.png" id="6_6x7u3"]
[ext_resource type="Texture2D" uid="uid://b5flsctyaomys" path="res://asset/main_character/AS/ship/2.png" id="7_41nh3"]
[ext_resource type="Texture2D" uid="uid://bumw1c63gtsew" path="res://asset/main_character/AS/ship/3.png" id="8_066oh"]
[ext_resource type="Script" path="res://items/PickUpArea.gd" id="8_txm24"]
[ext_resource type="Texture2D" uid="uid://bt0664lllchbh" path="res://asset/main_character/NE/ship/1.png" id="12_k6tbf"]
[ext_resource type="Texture2D" uid="uid://tnle86quioek" path="res://asset/main_character/NE/ship/2.png" id="13_igtmd"]
[ext_resource type="Texture2D" uid="uid://cr7e5cn3ehrc2" path="res://asset/main_character/NE/ship/3.png" id="14_jusi1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1njj0"]
radius = 20.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_l2mft"]
shader = ExtResource("2_irfne")
shader_parameter/glow_color = Color(0.02, 0.01, 0.01, 0.05)
shader_parameter/glow_power = 2.0
shader_parameter/glow_shift = 1.0
shader_parameter/glow_radius = 1.0

[sub_resource type="SpriteFrames" id="SpriteFrames_4g4v0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_m0ue2")
}, {
"duration": 1.0,
"texture": ExtResource("4_augh6")
}, {
"duration": 1.0,
"texture": ExtResource("5_osn3v")
}],
"loop": true,
"name": &"AD",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_6x7u3")
}, {
"duration": 1.0,
"texture": ExtResource("7_41nh3")
}, {
"duration": 1.0,
"texture": ExtResource("8_066oh")
}],
"loop": true,
"name": &"AS",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jnccy")
}, {
"duration": 1.0,
"texture": ExtResource("4_c1glq")
}, {
"duration": 1.0,
"texture": ExtResource("5_pqbhw")
}],
"loop": true,
"name": &"IC",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("12_k6tbf")
}, {
"duration": 1.0,
"texture": ExtResource("13_igtmd")
}, {
"duration": 1.0,
"texture": ExtResource("14_jusi1")
}],
"loop": true,
"name": &"NE",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v6uy2"]
radius = 50.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
process_mode = 1
z_index = 12
collision_layer = 66
script = ExtResource("1_7kdv3")

[node name="BodyCollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_1njj0")

[node name="SpaceShip" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_l2mft")
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_4g4v0")
animation = &"IC"

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_speed = 10.0
rotation_smoothing_enabled = true
drag_horizontal_enabled = true
drag_vertical_enabled = true
editor_draw_drag_margin = true

[node name="PickUpArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 32
script = ExtResource("8_txm24")

[node name="ItemChecker" type="CollisionShape2D" parent="PickUpArea"]
shape = SubResource("CircleShape2D_v6uy2")
debug_color = Color(0, 0, 1, 0.392157)

[node name="OneSecondTimer" type="Timer" parent="."]

[node name="HurtAudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="MoveAudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="PuAudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="WeaponsRack" type="Node2D" parent="."]

[node name="CdTimer" type="Timer" parent="."]
one_shot = true

[node name="SpTimer" type="Timer" parent="."]
one_shot = true

[node name="SpBarTimer" type="Timer" parent="."]

[connection signal="area_entered" from="PickUpArea" to="PickUpArea" method="_on_area_entered"]
[connection signal="timeout" from="OneSecondTimer" to="." method="_on_one_second_timer_timeout"]
[connection signal="timeout" from="CdTimer" to="." method="sp_ready_to_call"]
[connection signal="timeout" from="SpTimer" to="." method="prepare_sp"]
[connection signal="timeout" from="SpBarTimer" to="." method="sp_bar_timer_timeout"]
